# image_processing

./: .gitignore  Cargo.toml
benches/: filters.rs
src/: filter.rs  filter_option.rs  filter_trait.rs  img.rs  lib.rs  main.rs  matrix2d.rs  message.rs  my_app.rs  my_component.rs  my_err.rs  pixel_pos.rs  proc_steps.rs  progress_provider.rs  small_dlg.rs  step_editor.rs  utils.rs
src/filter/: channel.rs  color_channel.rs  filter_option.rs  filter_trait.rs  linear.rs  mod.rs  non_linear.rs  utils.rs
src/filter/color_channel/: cut_brightness.rs  equalize_hist.rs  extract_channel.rs  mod.rs  neutralize_channel.rs  rgb2gray.rs
src/filter/linear/: custom.rs  gaussian.rs  mean.rs  mod.rs
src/filter/non_linear/: canny_edge_detection.rs  histogram_local_contrast.rs  median.rs  mod.rs
src/img/: color_ops.rs  img.rs  img_layer.rs  img_ops.rs  iterators.rs  iterators_.rs  matrix2d.rs  mod.rs  pixel_pos.rs
src/img/filter/: filter_option.rs  filter_trait.rs  mod.rs  utils.rs
src/img/iterators/: mod.rs  pixel_pos.rs  pixels_area.rs  pixels_iter.rs
src/my_component/: container.rs  img_presenter.rs  line.rs  message.rs  mod.rs  step.rs  step_editor.rs  usual.rs
src/my_ui/: container.rs  embedded_images.rs  img_presenter.rs  line.rs  message.rs  mod.rs  small_dlg.rs  step.rs  step_editor.rs  usual.rs
src/processing/: background_worker.rs  bw_error.rs  guarded.rs  line.rs  mod.rs  processing_data.rs  progress_provider.rs  step.rs  step_editor.rs  task.rs  task_info.rs  task_info_channel.rs  tests.rs
src/processing/guarded/: mod.rs  proc_step.rs  tasks.rs
(+14 files in other folders)
