[package]
name = "image_processing"
version = "0.1.0"
authors = ["Roman Uvarov <uvarovrs40@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.0.14"
chrono = "0.4.19"
jpeg-encoder = "0.1.0"

[profile.dev]
opt-level = 3