[package]
name = "image_processing"
version = "0.1.0"
authors = ["Roman Uvarov <uvarovrs40@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.0.19"
chrono = "0.4.19"
jpeg-encoder = "0.1.0"
rust-embed = "5.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filters"
harness = false

[profile.dev]
opt-level = 0